# cabal2macpkg

./: .gitignore  LICENSE  Main.hs  README.markdown  README.text  TODO.markdown  cabal2macpkg.cabal
Distribution/OSX/: Info.hs  InstallerScript.hs  PackageInfo.hs
Program/: MakeMetaPackage.hs  MakePackage.hs  Options.hs  Util.hs
